--- a/苏轼词两首.md
+++ b/苏轼词两首.md
@@ -1,8 +1,7 @@
 ## 【水调歌头·明月几时有】
-
 ### 宋 ● 苏轼
+#### 丙辰中秋 ，欢饮达旦，大醉，作此篇，兼怀子由。
 ```
-丙辰中秋 ，欢饮达旦，大醉，作此篇，兼怀子由。
 明月几时有，把酒问青天。不知天上宫阙，今夕是何年？
 我欲乘风归去，又恐琼楼玉宇，高处不胜寒。
 起舞弄清影，何似在人间？
@@ -13,7 +12,6 @@
 但愿人长久，千里共婵娟。
 ```
 ## 【卜算子 ● 黄州定慧院寓居作】
-
 ### 宋 ● 苏轼
 ``` 
 缺月挂疏桐，漏断人初静。
