--- a/苏轼词两首.md
+++ b/苏轼词两首.md
@@ -1,3 +1,7 @@
+# 苏轼词两首对照欣赏
+
+苏轼这两首词写于不同时期，不同处境，意境大部一样。第一首中秋狂欢酒醉之后而作。非常豪放浪漫。第二首写于谪居期间，悲凄寂寞但独立高洁。
+
 ## 【水调歌头·明月几时有】
 ### 宋 ● 苏轼
 #### 丙辰中秋 ，欢饮达旦，大醉，作此篇，兼怀子由。
