--- a/苏轼词两首.md
+++ b/苏轼词两首.md
@@ -1,6 +1,14 @@
 # 苏轼词两首对照欣赏
 
-苏轼这两首词写于不同时期，不同处境，意境大部一样。第一首中秋狂欢酒醉之后而作。非常豪放浪漫。第二首写于谪居期间，悲凄寂寞但独立高洁。
+苏轼这两首词写于不同时期，不同处境，意境大部一样。第一首中秋狂欢酒醉之后而作。非常豪放浪漫。第二首写于谪居期间，悲凄寂寞但独立高洁。一写明月，一写残月。“不应有恨”到“有恨无人省”。
+
+水调歌头·明月几时有                    | 卜算子 ● 黄州定慧院寓居作
+---                                  | ---
+明月                                  | 残月
+宫阙                                  | 疏桐
+我欲乘风归去                           | 谁见幽人独往来
+不应有恨                               | 有恨无人省
+千里共婵娟                          | 寂寞沙洲冷
 
 ## 【水调歌头·明月几时有】
 ### 宋 ● 苏轼
