--- a/苏轼词两首.md
+++ b/苏轼词两首.md
@@ -1,6 +1,6 @@
 # 苏轼词两首对照欣赏
 
-苏轼这两首词写于不同时期，不同处境，意境大部一样。第一首中秋狂欢酒醉之后而作。非常豪放浪漫。第二首写于谪居期间，悲凄寂寞但独立高洁。从“明月”到“残月”。“不应有恨”到“有恨无人省”， 从“千里共婵娟”到“寂寞沙洲冷”， 形成鲜明对照。
+苏轼这两首词写于不同时期，不同处境，意境大部一样。第一首中秋狂欢酒醉之后而作。非常豪放浪漫。第二首写于谪居期间，悲凄寂寞但独立高洁。从“明月”到“残月”，从“不应有恨”到“有恨无人省”， 从“千里共婵娟”到“寂寞沙洲冷”， 形成鲜明对照。
  
 水调歌头·明月几时有                   | 卜算子 ● 黄州定慧院寓居作
 ---                                 | ---
