--- a/程颢诗两首.md
+++ b/程颢诗两首.md
@@ -1,3 +1,10 @@
+秋日偶成                   | 游月殿
+---                       | ---
+ 从容                     | 徘徊
+静观皆自得                 | 已随秋气改
+佳兴                      | 晚凉
+天地有形                  | 世事无端
+
 ## 【秋日偶成】
 ### 宋 ● 程明道
 ```
